--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,64 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-
-}
-
-.App-header {
-  align-items: center;
-  background-color: #282c34;
+body {
+  display: flex;
+  flex-flow: column;
+  align-items: center; 
+  background-color: rgb(33, 37, 41);
   color: white;
+}
+
+.p-3 {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.padding-baixo {
+  margin-top: 4px;
+}
+
+.card {
+  position: relative;
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
+  min-width: 0;
+  word-wrap: break-word;
+  background-clip: border-box;
+  background-color: rgb(33, 37, 41);
+  border: 1px solid rgb(255 255 255 / 80%);
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.cabeçalho {
+  margin: 5px;
+  padding: 20px;
+  background-color: grey;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
+.categoria {
+  margin-top: 10px;
+  border: 1px  solid black;
+  padding: 20px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
 }
+
+/* .espaçamento-botao {
+
+} */
