--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 body {
-  display: flex;
-  flex-flow: column;
-  align-items: center; 
+  align-items: center;
   background-color: white;
   color: white;
+  display: flex;
+  flex-flow: column;
 }
 
 .p-3 {
+  align-items: center;
   display: flex;
   flex-flow: column;
-  align-items: center;
 }
 
 .btn-dark {
@@ -22,34 +22,25 @@ body {
 }
 
 .card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
   background-clip: border-box;
   background-color: rgb(33, 37, 41);
   border: 1px solid rgb(255 255 255 / 80%);
   border-radius: 30px;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  -ms-border-radius: 30px;
-  -o-border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  position: relative;
+  word-wrap: break-word;
 }
 
 .cabeçalho {
+  align-items: center;
+  background-color: rgb(228, 228, 228);
+  border-radius: 10px;
+  display: flex;
+  flex-flow: column wrap;
   margin: 5px;
   padding: 20px;
-  background-color: rgb(228, 228, 228);
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
 }
 
 .pesquisa-carrinho {
@@ -57,20 +48,20 @@ body {
 }
 
 .moldura {
+  background-color: rgb(255, 101, 0);
+  border-radius: 20px;
   margin-top: 10px;
   padding: 20px;
-  border-radius: 20px;
-  background-color: rgb(255, 101, 0);
 }
 
 .espaçamento-botao {
-  margin-right: 10px;
   margin-left: 10px;
+  margin-right: 10px;
 }
 
 .initial-message {
-  margin-top: 10px;
   color: rgb(87, 87, 87);
+  margin-top: 10px;
 }
 
 .categoria-itens {
@@ -79,36 +70,32 @@ body {
 }
 
 .categoria {
-  display: flex;
-  margin-right: 20px;
   background-color: rgb(255, 101, 0);
   border: none;
+  display: flex;
+  margin-right: 20px;
 }
 
 .cabeçalho-itens {
-  display: flex;
-  flex-direction: column;
   align-items: center;
+  background-color: rgb(228, 228, 228);
   border: none;
   border-radius: 10px;
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
   margin-bottom: 20px;
-  background-color: rgb(228, 228, 228);
+  padding: 10px;
 }
 
 .imagem-item {
-  width: 250px;
   border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  width: 250px;
 }
 
 .imagem-item-cart {
-  width: 450px;
   border: 1px solid rgb(209, 209, 209);
   border-radius: 10px;
+  width: 450px;
 }
 
 .link-itens {
@@ -120,14 +107,14 @@ body {
 }
 
 .preço {
-  margin-top: 13px;
   color: rgb(87, 87, 87);
+  margin-top: 13px;
 }
 
 .tamanho-button {
+  margin: 5px 20px;
   padding-left: 20px;
   padding-right: 20px;
-  margin: 5px 20px;
 }
 
 .imagem-cart {
