--- a/src/services/Avaliacao.css
+++ b/src/services/Avaliacao.css
@@ -6,3 +6,29 @@
   cursor: pointer;
   transition: color 200ms;
 }
+
+.centralizar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.centralizar1 {
+  display: flex;
+  align-items: center;
+}
+
+.color-world {
+  color: black;
+}
+
+.avaliacao {
+  margin-top: 10px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
